# travis_example

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  main.cpp
cmake/Modules/: FindTyphonIO.cmake
src/: CMakeLists.txt  another.cpp  another.h  dummy.cpp  dummy.h  main.cpp
test/: CMakeLists.txt  test_runner.cpp  testanother.cpp  testanother.h  testdummy.cpp  testdummy.h
